ripristino modello tex

--- a/doc/TeX/Modello_da_Usare.tex
+++ b/doc/TeX/Modello_da_Usare.tex
@@ -32,7 +32,7 @@
 \vspace{20pt}
 
 \begin{center}
-\includegraphics[width=150pt]{../logo/logo}
+\includegraphics[width=150pt]{logo}
 \end{center}
 
 \vspace{170pt}
