--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -1,3 +1,5 @@
+\documentclass[a4paper]{article}
+
 \begin{document}
 
 \title{Piano di qualifica}
@@ -6,7 +8,7 @@
 \section{Introduzione}
 
 \subsection{Scopo del documento}
-Il presente documento definisce il livello di qualit\`a atteso del prodotto e del processo di realizzazione dello stesso, indica le metodologie da adottare per assicurare la qualit\`a e riporta le attivit\`a svolte inerenti la gestione della qualit\`a.
+Il presente documento definisce il livello di qualit\'a atteso del prodotto e del processo di realizzazione dello stesso, indica le metodologie da adottare per assicurare la qualit\`a e riporta le attivit\'a svolte inerenti la gestione della qualit\'a.
 
 \subsection{Scopo del prodotto}
 Il prodotto intende permettere la realizzazione di \underline{grafica vettoriale} tramite una comoda interfaccia web.
@@ -19,23 +21,29 @@ Si veda \ref{Glossario.pdf}
 
 \section{Visione generale della strategia di verifica}
 
-\subsection{Organizzazione, pianificazione strategica e temporale, responsabilit\`a}
-Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una modifica, o ad un insieme di modifiche. Qualora sia possibile svolgere l'attivit\`a in modo automatico, essa dovr\`a essere applicata in seguito ad ogni singolo cambiamento. I test automatici saranno predisposti dai verificatori. Negli altri casi, onde evitare di attivare un'intero ciclo di verifica con gli annessi costi per delle modifiche di scarso rilievo, l'attivit\`a sar\`a svolta quando le differenze tra la versione attuale del prodotto e la versione su cui \'e stata applicata l'ultima verifica sono sufficientemente rilevanti. \'E compito di chi effettua le modifiche di segnalare ai verificatori la necessit\`a di un'attivit\`a di verifica. Il responsabile della qualifica dovr\`a accertarsi che il tutto si svolga correttamente e che segua quanto descritto nel presente documento.
+\subsection{Organizzazione, pianificazione strategica e temporale, responsabilit\'a}
+Le attivit\'a di verifica si dovranno svolgere immediatamente in seguito ad una modifica, o ad un insieme di modifiche. Qualora sia possibile svolgere l'attivit\`a in modo automatico, essa dovr\'a essere applicata in seguito ad ogni singolo cambiamento. I test automatici saranno predisposti dai verificatori. Negli altri casi, onde evitare di attivare un'intero ciclo di verifica con gli annessi costi per delle modifiche di scarso rilievo, l'attivit\'a sar\'a svolta quando le differenze tra la versione attuale del prodotto e la versione su cui \`e stata applicata l'ultima verifica sono sufficientemente rilevanti. \`E compito di chi effettua le modifiche di segnalare ai verificatori la necessit\'a di un'attivit\'a di verifica. Il responsabile della qualifica dovr\'a accertarsi che il tutto si svolga correttamente e che segua quanto descritto nel presente documento.
 
 \subsection{Risorse necessarie, risorse disponibili}
-\paragraph{Documenti} Ogni documento sar\`a verificato da un revisore. Sarebbe auspicabile che a documenti particolarmente importanti, come ad esempio la definizione di prodotto, venissero assegnati due revisori, ma i costi eccessivi associati a una tale scelta non lo permettono.
+\paragraph{Documenti} Ogni documento sar\'a verificato da un revisore. Sarebbe auspicabile che a documenti particolarmente importanti, come ad esempio la definizione di prodotto, venissero assegnati due revisori, ma i costi eccessivi associati a una tale scelta non lo permettono.
 \paragraph{Codice} Il numero di verificatori da assegnare ad un dato modulo di codice varieranno in base al modulo stesso.
 
 \subsection{Strumenti, tecniche, metodi}
-Per il tracciamento degli errori e della loro soluzione ci si avvarr\`a degli strumenti di bug tracking messi a disposizione da \textit{SourceForge} e dagli strumenti di versionamento in uso. \linebreak
-Le discussioni tra i verificatori e gli autori delle modifiche avverrano tramite il sistema di commenti di \textit{GitHub} qualora si tratti di annotazioni di scarsa entit\`a, mentre discussioni pi\`u rilevanti avverranno sul gruppo di discussione interno all'azienda. Entrambi i sistemi mantengono in modo persistente le informazioni, permettendo dei riferimenti futuri alle discussioni.
+Per il tracciamento degli errori e della loro soluzione ci si avvarr\'a degli strumenti di bug tracking messi a disposizione da \textit{SourceForge} e dagli strumenti di versionamento in uso. \linebreak
+Le discussioni tra i verificatori e gli autori delle modifiche avverrano tramite il sistema di commenti di \textit{GitHub} qualora si tratti di annotazioni di scarsa entit\'a, mentre discussioni pi\'u rilevanti avverranno sul gruppo di discussione interno all'azienda. Entrambi i sistemi mantengono in modo persistente le informazioni, permettendo dei riferimenti futuri alle discussioni.
 \linebreak
-I verificatori saranno avvisati della necessit\`a di un'attivit\`a di verifica tramite un messaggio nel gruppo di discussione interno. 
+I verificatori saranno avvisati della necessit\'a di un'attivit\'a di verifica tramite un messaggio nel gruppo di discussione interno. 
 
 
 \section{Gestione amministrativa della revisione}
 
 \subsection{Comunicazione e risoluzione di anomalie}
-Quando un'anomalia viene riscontrata durante una verifica, il verificatore provveder\`a ad aggiungere un ticket al sistema di bug tracking e a segnalarlo, usando i metodi sopra esposti, a chi dovr\`a correggere il problema. La segnalazione dell'errore dovr\`a contenere una descrizione chiara del problema riscontrato. Qualora il correttore trovasse poco chiara o ambigua la descrizione, o fosse in disaccordo con la stessa, aprir\`a una discussione con il verificatore nel gruppo di discussione interno. A correzione avvenuta, questo sar\`a segnalato al verificatore tramite il gruppo di discussione. Il verificatore applicher\`a nuovamente il procedimento di verifica alla correzione. Se quest'ultimo passo va a buon fine, il correttore porr\`a come risolto il ticket nel sistema di bug tracking.
+Quando un'anomalia viene riscontrata durante una verifica, il verificatore provveder\'a ad aggiungere un ticket al sistema di bug tracking e a segnalarlo, usando i metodi sopra esposti, a chi dovr\'a correggere il problema. La segnalazione dell'errore dovr\'a contenere una descrizione chiara del problema riscontrato. Qualora il correttore trovasse poco chiara o ambigua la descrizione, o fosse in disaccordo con la stessa, aprir\'a una discussione con il verificatore nel gruppo di discussione interno. A correzione avvenuta, questo sar\'a segnalato al verificatore tramite il gruppo di discussione. Il verificatore applicher\'a nuovamente il procedimento di verifica alla correzione. Se quest'ultimo passo va a buon fine, il correttore porr\'a come risolto il ticket nel sistema di bug tracking.
+
+\subsection{Trattamento delle discrepanze}
+Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\'a provveder\'a a individuare la causa e il colpevole. Il responsabile della qualit\'a, dopo averne discusso con il colpevole, traccier\'a delle azioni correttive e si assicurer\'a che vengano attuate.
+
+\subsection{Procedure di controllo di qualità di processo}
+
 
 \end{document}
