piano di qualifica: lievi modifiche

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -26,11 +26,11 @@ Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una 
 
 \subsection{Risorse necessarie, risorse disponibili}
 \paragraph{Documenti} Ogni documento sar\`a verificato da un revisore. Sarebbe auspicabile che a documenti particolarmente importanti, come ad esempio la definizione di prodotto, venissero assegnati due revisori, ma i costi eccessivi associati a una tale scelta non lo permettono.
-\paragraph{Codice} Il numero di verificatori da assegnare ad un dato modulo di codice varieranno in base al modulo stesso.
+\paragraph{Codice} Il numero di verificatori da assegnare ad un dato modulo di codice varieranno in base alle esigenze del modulo stesso.
 
 \subsection{Strumenti, tecniche, metodi}
-Per il tracciamento degli errori e della loro soluzione ci si avvarr\`a degli strumenti di bug tracking messi a disposizione da \textit{SourceForge} e dagli strumenti di versionamento in uso. \linebreak
-Le discussioni tra i verificatori e gli autori delle modifiche avverrano tramite il sistema di commenti di \textit{GitHub} qualora si tratti di annotazioni di scarsa entit\`a, mentre discussioni pi\`u rilevanti avverranno sul gruppo di discussione interno all'azienda. Entrambi i sistemi mantengono in modo persistente le informazioni, permettendo dei riferimenti futuri alle discussioni.
+Per il tracciamento degli errori e delle loro soluzioni ci si avvarr\`a degli strumenti di bug tracking messi a disposizione da \textit{SourceForge} e dagli strumenti di versionamento in uso. \linebreak
+Le discussioni tra i verificatori e gli autori delle modifiche avverrano tramite il sistema di commenti di \textit{GitHub} qualora si tratti di annotazioni di scarsa entit\`a, mentre discussioni pi\`u rilevanti avverranno nel gruppo di discussione interno all'azienda. Entrambi i sistemi mantengono in modo persistente le informazioni, permettendo dei riferimenti futuri alle stesse.
 \linebreak
 I verificatori saranno avvisati della necessit\`a di un'attivit\`a di verifica tramite un messaggio nel gruppo di discussione interno. 
 
@@ -44,7 +44,7 @@ Quando un'anomalia viene riscontrata durante una verifica, il verificatore provv
 Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\`a provveder\`a a individuare la causa e il colpevole. Il responsabile della qualit\`a, dopo averne discusso con il colpevole, traccier\`a delle azioni correttive e si assicurer\`a che vengano attuate.
 
 \subsection{Procedure di controllo di qualit\`a di processo}
-L'amministratore del progetto deve assicurarsi che gli standard descritti nell \textit{norme di progetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte.
+L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{norme di progetto} siano rispettati, e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte e che seguano le procedure descritte in questo documento.
 
 
 \section{Resoconto delle attivit\`a di verifica}
