piano di qualifica: aggiunta versione

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -4,6 +4,12 @@
 
 \title{Piano di qualifica}
 
+\section{Registro delle modifiche}
+\begin{tabular}{|c|c|c|}
+\hline
+Versione & Descrizione & Autore \\ \hline 
+0.0 & Bozza iniziale & Dissegna Stefano \\ \hline 
+\end{tabular} 
 
 \section{Introduzione}
 
@@ -31,6 +37,8 @@ Le attivit\`a di verifica si dovranno svolgere immediatamente in seguito ad una 
 \item il documento sia completo
 \item il documento risolva il problema corretto
 \end{enumerate}
+\paragraph{Verifica del progetto architetturale}
+
 \paragraph{Verifica del codice}
 La verifica del codice si compone dei seguenti aspetti:
 \begin{enumerate}
