piano di qualifica: aggiunta data

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -5,10 +5,10 @@
 \title{Piano di qualifica}
 
 \section{Registro delle modifiche}
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|c|c|c|c|}
 \hline
-Versione & Descrizione & Autore \\ \hline 
-0.0 & Bozza iniziale & Dissegna Stefano \\ \hline 
+Versione & Data & Descrizione & Autore \\ \hline 
+0.0 & 22/11/2008 & Bozza iniziale & Dissegna Stefano \\ \hline 
 \end{tabular} 
 
 \section{Introduzione}
