revisione template LaTeX

--- a/doc/TeX/Modello_da_Usare.tex
+++ b/doc/TeX/Modello_da_Usare.tex
@@ -19,7 +19,7 @@
 
 \begin{center}
 	\begin{Huge}
-				\textbf{AjaxDraw}
+				\textbf{\ajax}
 	\end{Huge}
 \end{center}			
 
@@ -191,13 +191,9 @@ Testo sotto sezione 	Testo sotto sezione Testo sotto sezione 	Testo sotto sezion
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-		Numero processi & (max. 20)\\
-		Dimensione della Memoria Principale & (Max 1Gb) \\
-		Dimensione parte di SWAP & (Max 1Gb)? \\
-		Tempo di Context Switch & \\
-		Tempo accesso a disco & \\
-		Banda dei bus & \\
-		TLB????? & (Si/No)\\
+		Prova & (max. 20)\\
+		Prova2 & (Max 1Gb) \\
+		
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
