sistemati path logo e base

--- a/doc/TeX/Modello_da_Usare.tex
+++ b/doc/TeX/Modello_da_Usare.tex
@@ -1,4 +1,4 @@
-	\input{base} %BASE!!!
+	\input{../TeX/base} %BASE!!!
 
 \title{\TITOLODOC}
 \author{Piero Bizzotto}
@@ -32,7 +32,7 @@
 \vspace{20pt}
 
 \begin{center}
-\includegraphics[width=150pt]{logo}
+\includegraphics[width=150pt]{../logo/logo}
 \end{center}
 
 \vspace{170pt}
