tolti base e logo da cartella ADR, causa troppe ripetizioni, linkati con i file in TeX e logo

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -1,4 +1,4 @@
-\input{base} %BASE!!!
+\input{../TeX/base} %BASE!!!
 \usepackage{multirow}
 \begin{document}
 
@@ -27,7 +27,7 @@
 \vspace{20pt}
 
 \begin{center}
-\includegraphics[width=150pt]{logo}
+\includegraphics[width=150pt]{../logo/logo}
 \end{center}
 
 \vspace{160pt}
