--- a/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -263,6 +263,19 @@ Quando il canvas \'e troppo grande per essere completamente visualizzato, l'uten
 \paragraph{Postcondizioni} L'utente vede su schermo la parte di canvas desiderata.
 
 \subsubsezione{Caso d'uso: aumenta zoom}
+\paragraph{Attori coinvolti} Utente
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di ingrandire il canvas ed il suo contenuto mantendendo le proporzioni.
+\paragraph{Flusso di eventi}
+\begin{enumerate}
+\item L'utente seleziona, esplicitamente o implicitamente, la parte di canvas da mantenere al centro della visualizzazione.
+\item L'utente seleziona di quanto aumentare lo zoom.
+\item Il sistema ingrandisce il canvas di quanto richiesto
+\item Il sistema accentra la visualizzazione dove richiesto dall'utente
+\end{enumerate}
+\paragraph{Precondizioni} Il canvas \'e visualizzato
+\paragraph{Postcondizioni} Il canvas \'e ingrandito
+
 
 %inizio requisiti
 \sezione{Lista dei requisiti}
