analisi requisiti: descrizione testuale del caso d'uso 'diminuisci zoom'

--- a/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -276,6 +276,19 @@ Il sistema permette all'utente di ingrandire il canvas ed il suo contenuto mante
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il canvas \'e ingrandito
 
+\subsubsezione{Caso d'uso: diminuisci zoom}
+\paragraph{Attori coinvolti} Utente
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di rimpicciolire il canvas ed il suo contenuto mantendendo le proporzioni.
+\paragraph{Flusso di eventi}
+\begin{enumerate}
+\item L'utente seleziona, esplicitamente o implicitamente, la parte di canvas da mantenere al centro della visualizzazione.
+\item L'utente seleziona di quanto diminuire lo zoom.
+\item Il sistema rimpicciolisce il canvas di quanto richiesto
+\item Il sistema accentra la visualizzazione dove richiesto dall'utente
+\end{enumerate}
+\paragraph{Precondizioni} Il canvas \'e visualizzato
+\paragraph{Postcondizioni} Il canvas \'e rimpicciolito
 
 %inizio requisiti
 \sezione{Lista dei requisiti}
