analisi requisiti: descrizione testuale del caso d'uso 'esporta in SVG'

--- a/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -290,6 +290,19 @@ Il sistema permette all'utente di rimpicciolire il canvas ed il suo contenuto ma
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il canvas \'e rimpicciolito
 
+\subsubsezione{Caso d'uso: esporta in SVG}
+\paragraph{Attori coinvolti} Utente
+\paragraph{Scopo e descrizione sintetica} 
+Il sistema permette all'utente di esportare in formato SVG il contenuto del canvas.
+\paragraph{Flusso di eventi}
+\begin{enumerate}
+\item L'utente seleziona il comando per esportare il canvas in formato SVG.
+\item Il sistema genera un file SVG il cui contenuto corrisponde a quanto correntemente visualizzato nel canvas.
+\item Il sistema rende disponibile all'utente il file generato.
+\end{enumerate}
+\paragraph{Precondizioni} Il canvas \'e visualizzato
+\paragraph{Postcondizioni} Il file SVG \'e disponibile all'utente e contiene quanto visualizzato nel canvas.
+
 %inizio requisiti
 \sezione{Lista dei requisiti}
 \label{listarequisiti}
