analisi requisiti: riferimento a use case espansi per 'disegna' e 'seleziona e modifica'

--- a/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/TeX/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -303,6 +303,12 @@ Il sistema permette all'utente di esportare in formato SVG il contenuto del canv
 \paragraph{Precondizioni} Il canvas \'e visualizzato
 \paragraph{Postcondizioni} Il file SVG \'e disponibile all'utente e contiene quanto visualizzato nel canvas.
 
+\subsubsezione{Caso d'uso: disegna}
+Si rimanda a \ref{ucdisegna} per una descrizione approfondita.
+
+\subsubsezione{Caso d'uso: seleziona e modifica}
+Si rimanda a \ref{ucselezionaemodifica} per una descrizione approfondita.
+
 %inizio requisiti
 \sezione{Lista dei requisiti}
 \label{listarequisiti}
